textarea not stretching bug.

--- a/src/app/components/splash/interaction/interaction.component.less
+++ b/src/app/components/splash/interaction/interaction.component.less
@@ -59,7 +59,7 @@ interaction {
             }
         }
 
-        type-any {
+        free-type {
             flex: 2;
         }
 
